Added or changed some content.

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             For awhile, I worked in municiple government and volunteered in higher education.
          </p>
          <p>
-            But now, I am a Full-Stack Web Developer.
+            But now I consult as a Software Engineer who speicalizes in JavaScript ES6 and Node.js.
          </p>
          <p>
-            I specialize in Node.js and JavaScript, but I also like messing around with other frameworks and languages.
+            I also like messing around with other frameworks and languages.
          </p>
          <p>
             I'm trying my darndest to be more<a href="http://codepen.io/mvaden/">creative</a> and
@@ -94,17 +94,23 @@
                                                target="blank">ading</a>, writing (offline - pen and journal) and learning.
          </p>
          <p>
-            I love traveling, although I don't do it nearly enough.
+            I have vounteered for <a href="http://www.blackgirlscode.com/">Black Girls Code</a> and the <a href="https://www.gwul.org/">Greater Washington Urban League</a>, proudly.
+         </p>
+         <p>
+            I've also done some open source contribution to <a href="http://codefordc.org/">Code for DC</a>.
+         </p>
+         <p>
+            I love to travel, although I don't do it nearly enough.
          </p>
          <p>
             My favorite web-based activities involve Spotify playlist curating, listening to podcasts and browsing
             <a href="https://www.instagram.com/abovtheinfluinc/"
                target="blank">Instagram</a>.
          </p>
-         <p>
-            I'm not that big on Tumblr, <a href="http://6seven.tumblr.com/"
-                                      target="blank">but sometimes I still do that</a>.
-         </p>
+         <!--<p>-->
+            <!--I'm not that big on Tumblr, <a href="http://6seven.tumblr.com/"-->
+                                      <!--target="blank">but sometimes I still do that</a>.-->
+         <!--</p>-->
          <p>
             After a hectic week, I might enjoy a <a href="http://cooking.nytimes.com/recipes/1018216-moscow-mule"
                                                          target="blank">Moscow Mule</a> or two!
@@ -117,7 +123,7 @@
             I have a slightly more detailed <a href="resume_abridged.html"
                                                target="blank">resume</a>, if you're into that sort of thing.</p>
          <p>
-            If you have an interesting idea or problem that yearns for a solution, then
+            And if you have an interesting idea or problem that yearns for a solution, then
             <a href="mailto:m@matthewvaden.com"
                target="blank">let's talk</a>!
          </p>
